   user on systems that lack both setresuid() and setreuid().
   Bug #713.

 * Fixed a bug introduced in sudo 1.8.14 that prevented visudo from
   re-editing the correct file when a syntax error was detected.

 * Fixed a bug where sudo would not relay a SIGHUP signal to the
   command when the terminal is closed and the command is not run
   in its own pseudo-tty.  Bug #719

What's new in Sudo 1.8.14p3

 * Fixed a bug introduced in sudo 1.8.14p2 that prevented sudo
   from working when no tty was present.

 * Fixed tty detection on newer AIX systems where dev_t is 64-bit.

What's new in Sudo 1.8.14p2

 * Fixed a bug introduced in sudo 1.8.14 that prevented the lecture
   file from being created.  Bug #704.

What's new in Sudo 1.8.14p1

 * Fixed a bug introduced in sudo 1.8.14 that prevented the sssd
   backend from working.  Bug #703.

What's new in Sudo 1.8.14

 * Log messages on Mac OS X now respect sudoers_locale when sudo
   is build with NLS support.

 * The sudo manual pages now pass "mandoc -Tlint" with no warnings.

 * Fixed a compilation problem on systems with the sig2str() function
   that do not define SIG2STR_MAX in signal.h.

 * Worked around a compiler bug that resulted in unexpected behavior
   when returning an int from a function declared to return bool
   without an explicit cast.

 * Worked around a bug in Mac OS X 10.10 BSD auditing where the
   au_preselect() fails for AUE_sudo events but succeeds for
   AUE_DARWIN_sudo.

 * Fixed a hang on Linux systems with glibc when sudo is linked with
   jemalloc.

 * When the user runs a command as a user ID that is not present in
   the password database via the -u flag, the command is now run
   with the group ID of the invoking user instead of group ID 0.

 * Fixed a compilation problem on systems that don't pull in
   definitions of uid_t and gid_t without sys/types.h or unistd.h.

 * Fixed a compilation problem on newer AIX systems which use a